# pgl_validate

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  pgl_validate.control
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: design.md
packaging/windows/: README.md  license.rtf  pgl_validate.wxs
scripts/: README.md  check-design-catalog-ddl.ps1  check-powershell.ps1  check-public-comments.ps1  check-release-assets.ps1  check-release-version.ps1  ci-setup.ps1  install-pglogical-release.ps1  package-pgrx.ps1  package-windows-msi.ps1  pgrx-common.ps1  pgrx-vs.ps1  stop-pgrx-test-clusters.ps1  test-async-worker.ps1  test-native-logical-fence.ps1  test-pglogical-fence.ps1  test-pglogical-mixed-major.ps1  test-pgrx-regress.ps1  test-pgrx.ps1  test-physical-standby-fence.ps1
sql/: bootstrap.sql  comments.sql  finalize.sql
sql/bootstrap/: 001_catalog.sql  010_contracts.sql  020_barriers.sql  025_fence_records.sql  030_fencing.sql  035_throttle.sql  036_re_fence.sql  040_planning.sql  050_compare.sql  060_repair.sql  070_reporting.sql  080_fence_maintenance.sql
src/: lib.rs  pg_tests.rs  sql_api.rs  worker.rs
src/compat/: mod.rs
src/digest/: algorithm.rs  encode.rs  lthash.rs  mod.rs  row_digest.rs
src/transport/: libpq.rs  mod.rs
tests/pg_regress/expected/: 001_api_catalog.out  010_planner_sql.out  020_reporting_repair.out  setup.out
tests/pg_regress/sql/: 001_api_catalog.sql  010_planner_sql.sql  020_reporting_repair.sql  setup.sql
