[package]
name = "pgl_validate"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg18"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
blake3 = "1.5"
pgrx = "=0.19.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
pgrx-tests = "=0.19.1"
proptest = "1.6"
